--- a/stylesheet.css
+++ b/stylesheet.css
@@ -59,7 +59,7 @@
  }
 
 body {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS';
     background-color: #2C5530;
 
 }
