--- a/CSS/home.css
+++ b/CSS/home.css
@@ -120,6 +120,7 @@ body{
 
 .wrapper {
     display: flex;
+    flex-wrap: wrap;
     padding: 1rem;
     height: 30vh;
     justify-content: center;
@@ -158,7 +159,8 @@ body{
 .content-1 img {
     max-width: 100%;
     max-height: 100%;
-}
+} 
+
 
 .lista {
     margin-top: auto;
