--- a/CSS/pacificwest.css
+++ b/CSS/pacificwest.css
@@ -81,7 +81,7 @@ body{
 .content-container {
     padding: 2rem;
     background-color: #739E82; 
-    color: white;
+    color: black;
     margin-left: 2rem;
     margin-right: 2rem;
     margin-bottom: 2rem;
