--- a/CSS/home.css
+++ b/CSS/home.css
@@ -130,9 +130,10 @@ body{
     width: 96%;
     height: 20vh;
     background-color: #739E82;
-    color: whitesmoke;
+    color: black;
     padding: 2rem;
     padding-bottom: 2.5rem;
+    font-size: larger;
 }
 
 .content-1 ul {
@@ -213,6 +214,7 @@ input[type="submit"] {
     background-color: #2C5530;
     display: flex;
     flex-direction: row;
+    padding: 2rem;
 }
 
 .contact {
