--- a/CSS/home.css
+++ b/CSS/home.css
@@ -106,16 +106,16 @@ body{
     flex-direction: column;
     justify-content: center;
     width: 80%;
-    padding: 20px;
+    padding: 1rem;
 }
 
 .text {
-    margin-bottom: 20px;
+    margin-bottom: .5rem;
 }
 
 .regions {
     text-align: center;
-    padding: 4px;
+    padding: 1rem;
 }
 
 .wrapper {
@@ -127,8 +127,8 @@ body{
 }
 
 .content-1 {
-    width: 96%;
-    height: 20vh;
+    width: 100%;
+    height: 9rem;
     background-color: #739E82;
     color: black;
     padding: 2rem;
@@ -150,11 +150,12 @@ body{
     align-items: center;
     justify-content: center;
     text-align: center;
+    padding-right: .7rem;
 }
 
 .content-1 ul li img {
-    width: 240px;
-    height: 140px;
+    width: 100%;
+    height: 100%;
 }
 
 .content-1 img {
