--- a/CSS/home.css
+++ b/CSS/home.css
@@ -113,69 +113,66 @@ body{
     margin-bottom: .5rem;
 }
 
-.regions {
-    text-align: center;
-    padding: 1rem;
-}
-
-.wrapper {
+.card-body {
     display: flex;
-    flex-wrap: wrap;
-    padding: 1rem;
-    height: 30vh; 
     justify-content: center;
+    flex-direction: column;
 }
-
-.content-1 {
-    width: 100%;
-    height: 9rem;
-    background-color: #739E82;
-    color: black;
-    padding: 2rem;
-    padding-bottom: 2.5rem;
-    font-size: larger;
-}
-
-.content-1 ul {
+h5 {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin: 0;
-    padding: 0;
+    align-self:center ;
 }
+/*regions */
 
-.content-1 li {
+.region {
+    text-align: center;
+    position: relative;
+    padding: 2rem;
+  }
+  
+  .container2 {
+    margin: 0 auto;
+    background-color: #739E82;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    text-align: center;
-    padding-right: .7rem;
-}
-
-.content-1 ul li img {
-    width: 100%;
-    height: 100%;
-}
-
-.content-1 img {
-    max-width: 100%;
-    max-height: 100%;
-} 
-
-
-.lista {
-    margin-top: auto;
+  }
+  
+  .list {
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
+    position: relative;
+  }
+  
+  #regionpics {
+    display: flex;
     list-style: none;
-    margin-top: auto;
-} 
+    padding: 0;
+  }
+  
+  #regionpics li {
+    margin:1rem;
+  }
+  
+  h4 {
+    margin-top: 0;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+  }
+
+  img {
+    max-width: 100%;
+  }
+
+  /*form*/
+
 
 .learn{
     text-align: center;
-    padding: 4px;
+    padding: 1rem;
 }
 
 .forum {
