--- a/CSS/home.css
+++ b/CSS/home.css
@@ -76,7 +76,7 @@ body{
 
 .desc {
     color:whitesmoke;
-    font-size: 12px;
+    font-size: 20;
     margin-bottom: 2px;
     width: 60%;
     text-align: center;
