--- a/CSS/home.css
+++ b/CSS/home.css
@@ -129,46 +129,46 @@ h5 {
     text-align: center;
     position: relative;
     padding: 2rem;
-  }
-  
-  .container2 {
+}
+
+.container2 {
     margin: 0 auto;
     background-color: #739E82;
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
-  
-  .list {
+}
+
+.list {
     display: flex;
     justify-content: center;
     position: relative;
-  }
-  
-  #regionpics {
+}
+
+#regionpics {
     display: flex;
     list-style: none;
     padding: 0;
-  }
-  
-  #regionpics li {
+}
+
+#regionpics li {
     margin:1rem;
-  }
-  
-  h4 {
+}
+
+h4 {
     margin-top: 0;
     position: absolute;
     top: 0;
     left: 50%;
     transform: translateX(-50%);
     z-index: 1;
-  }
+}
 
-  img {
+img {
     max-width: 100%;
-  }
+}
 
-  /*form*/
+/*form*/
 
 
 .learn{
@@ -190,11 +190,13 @@ form {
     flex-wrap: wrap;
     justify-content: flex-start;
     align-items: center;
+    font-size: larger;
 }
 
 label, input[type="email"], input[type="text"] {
     margin-bottom: 10px;
     flex-basis: 100%;
+    padding: 0.75rem;
 }
 
 input[type="submit"] {
