--- a/CSS/home.css
+++ b/CSS/home.css
@@ -34,12 +34,12 @@ body{
 
 .menu-items a:visited{
     text-decoration: none;
-    color: antiquewhite;
+    color: whitesmoke;
 }
 
 .menu-items a:hover{
     text-decoration: none;
-    color: antiquewhite;
+    color: rgb(196, 118, 17);
 }
 
 .menu-items a:active{
@@ -214,6 +214,10 @@ button[type="submit"] {
     margin: 0 auto;
 }
 
+button[type="submit"]:hover {
+    background-color: white;
+    color: black;
+}  
 
 .footer{
     margin-top: 20px;
