--- a/CSS/intermountain.css
+++ b/CSS/intermountain.css
@@ -33,8 +33,8 @@ body{
 
 .menu-items a:visited{
     text-decoration: none;
-    color: antiquewhite;
-} 
+    color: whitesmoke;
+}
 
 .menu-items a:hover{
     text-decoration: none;
@@ -124,6 +124,13 @@ body{
     cursor: pointer;
     border-radius: 5px;
     width: 20vw;
+    transition: background-color 0.3s ease;
+}
+
+.button:hover {
+    background-color: #739E82;
+    color: black;
+    font-weight: bold;
 }
 
 
