--- a/CSS/midwest.css
+++ b/CSS/midwest.css
@@ -33,8 +33,8 @@ body{
 
 .menu-items a:visited{
     text-decoration: none;
-    color: antiquewhite;
-} 
+    color: whitesmoke;
+}
 
 .menu-items a:hover{
     text-decoration: none;
