--- a/CSS/pacificnw-rev.css
+++ b/CSS/pacificnw-rev.css
@@ -28,8 +28,17 @@
 .navbar{
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: center;
+    align-items:center ;
     text-decoration: none;
+ }
+
+ #avo {
+    margin-right: auto;
+    padding-left: 3rem;
+}
+.my-svg path {
+    fill: #FEF9EF;
 }
 
 .menu-items{
