--- a/CSS/midwest.css
+++ b/CSS/midwest.css
@@ -126,6 +126,12 @@ body{
     width: 20vw;
 }
 
+.button:hover {
+    background-color: #739E82;
+    color: black;
+    font-weight: bold;
+}
+
 
 .park-links-container {
     background-color: #D38D5D;
