--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -184,6 +184,10 @@ h4 {
     height: auto; 
 }
 
+ul#regionpics li a:hover img {
+    border: 4px solid yellow;
+}
+
 /* reviews page */
 
 .cards {
