--- a/CSS/northeast-rev.css
+++ b/CSS/northeast-rev.css
@@ -41,6 +41,16 @@
     fill: #FEF9EF;
 }
 
+@media screen and (max-width: 700px) {
+    #avo {
+        display: none;
+    }
+
+    .menu-items {
+        margin-right: 0;
+    }
+}
+
 .menu-items{
     padding: 1rem;
     color: whitesmoke;
