--- a/CSS/intermountain.css
+++ b/CSS/intermountain.css
@@ -55,9 +55,12 @@ body{
     color: whitesmoke;
 }
 
+.menu-items a:focus {
+    color:aqua;
+}
 .menu-items a:hover{
     text-decoration: none;
-    color: rgb(196, 118, 17);
+    color: #F0B131;
 }
 
 .containter {
