--- a/CSS/northeast-rev.css
+++ b/CSS/northeast-rev.css
@@ -68,12 +68,15 @@
 
 .menu-items a:hover{
     text-decoration: none;
-    color: rgb(196, 118, 17);
+    color: #F0B131;
 }
 
 .menu-items a:active{
     text-decoration: none;
     color: whitesmoke;
+}
+.menu-items a:focus {
+    color:aqua;
 }
 
 body {
