--- a/CSS/sources.css
+++ b/CSS/sources.css
@@ -26,7 +26,6 @@
     color:whitesmoke;
 }
 
-
 .menu-items a:visited{
     text-decoration: none;
     color: whitesmoke;
@@ -35,9 +34,8 @@
  
  .menu-items a:hover{
     text-decoration: none;
-    color: rgb(196, 118, 17);
+    color: #F0B131;
  }
- 
  
  .menu-items a:active{
     text-decoration: none;
