--- a/CSS/stylesheet3.css
+++ b/CSS/stylesheet3.css
@@ -68,7 +68,7 @@
 
 .menu-items a:hover{
     text-decoration: none;
-    color: rgb(196, 118, 17);
+    color: #F0B131;
 }
 
 .menu-items a:active{
