--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -57,9 +57,11 @@
     color: whitesmoke;
 }
 
-.menu-items a:hover{
+.menu-items a:hover,
+.menu-items:focus {
     text-decoration: none;
-    color: rgb(196, 118, 17);
+    color: #f0b131;
+    border: 1px solid white;
 }
 
 .menu-items a:active{
