Revert "change in nav color"
This reverts commit 582d051001f2ab987857dc5869c53d1fc926e5bd.

--- a/CSS/midwest-rev.css
+++ b/CSS/midwest-rev.css
@@ -68,15 +68,12 @@
 
 .menu-items a:hover{
     text-decoration: none;
-    color: #F0B131;
+    color: rgb(196, 118, 17);
 }
 
 .menu-items a:active{
     text-decoration: none;
     color: whitesmoke;
-}
-.menu-items a:focus {
-    color:aqua;
 }
 
 body {
