--- a/CSS/sources.css
+++ b/CSS/sources.css
@@ -26,6 +26,7 @@
     color:whitesmoke;
 }
 
+
 .menu-items a:visited{
     text-decoration: none;
     color: whitesmoke;
@@ -34,8 +35,9 @@
  
  .menu-items a:hover{
     text-decoration: none;
-    color: #F0B131;
+    color: rgb(196, 118, 17);
  }
+ 
  
  .menu-items a:active{
     text-decoration: none;
