--- a/CSS/intermountain.css
+++ b/CSS/intermountain.css
@@ -55,12 +55,9 @@ body{
     color: whitesmoke;
 }
 
-.menu-items a:focus {
-    color:aqua;
-}
 .menu-items a:hover{
     text-decoration: none;
-    color: #F0B131;
+    color: rgb(196, 118, 17);
 }
 
 .containter {
